# DEF-W9-17_EW-Cruise-Missile

./: ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: debug.toml  default.toml  paper.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: find_batch_size.py  train.py  verify_assets.py
src/anima_ew_cruise_missile/: __init__.py  config.py  coordinator.py  data.py  env.py  eval.py  infer.py  ros2_node.py  serve.py  types.py
src/anima_ew_cruise_missile/modules/: __init__.py  cyber.py  deception.py  ew.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0301.md  PRD-0302.md  PRD-0401.md  PRD-0501.md  PRD-0502.md  PRD-0601.md  PRD-0602.md  PRD-0701.md  PRD-0702.md
tests/: test_api.py  test_config.py  test_env.py  test_eval.py  test_infer.py  test_training.py  test_types.py
